--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,36 @@
-selenium==4.1.4
+anyio==3.5.0
+asgiref==3.5.1
+async-generator==1.10
+attrs==21.4.0
+autopep8==1.6.0
 boto3==1.22.8
 botocore==1.25.8
-typing_extensions==4.2.0
+certifi==2021.10.8
+cffi==1.15.0
+click==8.1.3
+cryptography==37.0.2
 fastapi==0.76.0
-uvicorn==0.17.6
+h11==0.13.0
+idna==3.3
+jmespath==1.0.0
+outcome==1.1.0
+pycodestyle==2.8.0
+pycparser==2.21
+pydantic==1.9.0
+pyOpenSSL==22.0.0
+PySocks==1.7.1
+python-dateutil==2.8.2
 python-decouple==3.6
+s3transfer==0.5.2
+selenium==4.1.4
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+starlette==0.18.0
+toml==0.10.2
+trio==0.20.0
+trio-websocket==0.9.2
+typing_extensions==4.2.0
+urllib3==1.26.9
+uvicorn==0.17.6
+wsproto==1.1.0
